--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,8 @@
 :root {
   --primary-title-color: #212121;
   --secondary-title-color: #ffffff;
-  --primary-text-color: #212121;
   --secondary-text-color: #757575;
   --accent-color: #2196f3;
-  --header-primary-text-color: #212121;
-  --header-secondary-text-color: #757575;
   --background-primary-color: #2f303a;
   --background-secondary-color: #e5e5e5;
   --background-third-color: #f5f4fa;
@@ -40,9 +37,10 @@ body {
 }
 
 .logo-name {
-  color: var(--header-primary-text-color);
+  color: var(--primary-title-color);
 }
 .btn {
+  font-family: Roboto;
   border: none;
   cursor: pointer;
 }
@@ -53,28 +51,32 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(--header-primary-text-color);
+  color: var(--primary-title-color);
 }
 
 .header-link:hover,
-.header-link:focus {
+.header-link:focus,
+.header-contact-link:hover,
+.header-contact-link:focus,
+.contacts-link:hover,
+.contacts-link:focus,
+.current-link {
   color: var(--accent-color);
 }
+
+.btn:hover,
+.btn:focus {
+  color: var(--secondary-title-color);
+  background: var(--accent-color);
+}
+
 .header-contact-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 
-  color: var(--header-secondary-text-color);
-}
-
-.header-contact-link:hover,
-.header-contact-link:focus {
-  color: var(--accent-color);
-}
-.current-link {
-  color: var(--accent-color);
+  color: var(--secondary-text-color);
 }
 
 /* ------------Hero--------------- */
@@ -112,11 +114,10 @@ body {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  color: vat(--primary-text-color);
+  color: vat(--primary-title-color);
 }
 
 .priveleges-text {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   /* or 171% */
@@ -153,7 +154,6 @@ body {
   color: var(--primary-title-color);
 }
 .team-text {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
   /* identical to box height */
@@ -171,7 +171,6 @@ body {
 }
 
 .googlemaps {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   /* or 171% */
@@ -179,21 +178,20 @@ body {
   color: var(--secondary-title-color);
 }
 
-.contactns-link {
-  font-weight: 400;
+.contacts-link {
   font-size: 14px;
   line-height: 1.71;
   /* or 171% */
   color: rgba(255, 255, 255, 0.6);
 }
 
-.contactns-name {
+.contacts-name {
   color: var(--secondary-title-color);
 }
 
 /* ------------Portfolio-Hero--------------- */
 
-.works-btn {
+.portfolio-btn {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -223,7 +221,7 @@ body {
   color: var(--primary-title-color);
 }
 
-.prtfolio-text {
+.portfolio-text {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
